Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108448

Enforce warning-free application examples in the CI

XMLWordPrintable

    • 26f8dff7d (dev), 0c63426e6 (6.10), 11d905f57 (6.9), c4c0e558d (tqtc/lts-6.8), 3afce2126 (dev), fdf66191a (6.10), 7f6869939 (dev), db6098a83 (6.10), 34b101c38 (6.9), afd587251 (tqtc/lts-6.8)

      We do add warnings_are_errors to some configurations in the CI. Anyhow, this only applies to Qt library code so far, not to the Qt examples.

      Since Qt examples should advocate good coding style, they should also compile without warnings in the supported toolchains & configurations. It would be therefore beneficial to enforce this in the CI.

        For Gerrit Dashboard: QTBUG-108448
        # Subject Branch Project Status CR V

            qtbuildsystem Qt Build System Team
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated: