CMake: Mark qtdoc examples as warnings clean

Fix the few warnings in the examples that were discovered during the
test process.

Pick-to: 6.8 6.9
Task-number: QTBUG-108448
Change-Id: I40b71f679eccd4e0ebbcc8362a7b65f017927d02
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 7f68699392a75d993bcce5dcc911ed34336d69b2)